--- a/eeduro_delta/package.xml
+++ b/eeduro_delta/package.xml
@@ -12,6 +12,7 @@
 
 	<exec_depend>eeduro_delta_gazebo</exec_depend>
 	<exec_depend>eeduro_delta_description</exec_depend>
+	<exec_depend>eeduro_delta_joint_state_publisher</exec_depend>
 
   <export>
 		<metapackage/>
