--- a/eeduro_delta_joint_state_publisher/CMakeLists.txt
+++ b/eeduro_delta_joint_state_publisher/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 2.8.3)
-project(eeduro_delta_description)
+project(eeduro_delta_joint_state_publisher)
 
 ## Compile as C++11, supported in ROS Kinetic and newer
 add_compile_options(-std=c++11)
@@ -8,6 +8,8 @@ add_compile_options(-std=c++11)
 ## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
 ## is used, also find other catkin packages
 find_package(catkin REQUIRED COMPONENTS
+  roscpp
+  sensor_msgs
 )
 
 ## System dependencies are found with CMake's conventions
@@ -67,7 +69,7 @@ find_package(catkin REQUIRED COMPONENTS
 ## Generate added messages and services with any dependencies listed here
 # generate_messages(
 #   DEPENDENCIES
-#   std_msgs  # Or other packages containing msgs
+#   sensor_msgs
 # )
 
 ################################################
@@ -100,10 +102,9 @@ find_package(catkin REQUIRED COMPONENTS
 ## CATKIN_DEPENDS: catkin_packages dependent projects also need
 ## DEPENDS: system dependencies of this project that dependent projects also need
 catkin_package(
-  INCLUDE_DIRS
-		include
-#  LIBRARIES eeduro_delta_description
-  CATKIN_DEPENDS
+  INCLUDE_DIRS include
+#  LIBRARIES eeduro_delta_joint_state_pulisher
+  CATKIN_DEPENDS roscpp sensor_msgs
 #  DEPENDS system_lib
 )
 
@@ -120,7 +121,7 @@ include_directories(
 
 ## Declare a C++ library
 # add_library(${PROJECT_NAME}
-#   src/${PROJECT_NAME}/eeduro_delta_description.cpp
+#   src/${PROJECT_NAME}/eeduro_delta_joint_state_pulisher.cpp
 # )
 
 ## Add cmake target dependencies of the library
@@ -131,8 +132,9 @@ include_directories(
 ## Declare a C++ executable
 ## With catkin_make all packages are built within a single CMake context
 ## The recommended prefix ensures that target names across packages don't collide
-add_executable(${PROJECT_NAME}
-#	src/${PROJECT_NAME}_node.cpp
+add_executable(${PROJECT_NAME}_node
+	src/eeduro_delta_joint_state_publisher_node.cpp
+	src/EEDuroDeltaJointStatePublisher.cpp
 )
 
 ## Rename C++ executable without prefix
@@ -146,9 +148,9 @@ add_executable(${PROJECT_NAME}
 # add_dependencies(${PROJECT_NAME}_node ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 
 ## Specify libraries to link a library or executable target against
-#target_link_libraries(${PROJECT_NAME}
-#  ${catkin_LIBRARIES}
-#)
+target_link_libraries(${PROJECT_NAME}_node
+  ${catkin_LIBRARIES}
+)
 
 #############
 ## Install ##
@@ -190,7 +192,7 @@ add_executable(${PROJECT_NAME}
 #############
 
 ## Add gtest based cpp test target and link libraries
-# catkin_add_gtest(${PROJECT_NAME}-test test/test_eeduro_delta_description.cpp)
+# catkin_add_gtest(${PROJECT_NAME}-test test/test_eeduro_delta_joint_state_pulisher.cpp)
 # if(TARGET ${PROJECT_NAME}-test)
 #   target_link_libraries(${PROJECT_NAME}-test ${PROJECT_NAME})
 # endif()
