--- a/eeduro_delta/package.xml
+++ b/eeduro_delta/package.xml
@@ -1,18 +1,19 @@
 <?xml version="1.0"?>
 <package format="2">
   <name>eeduro_delta</name>
-  <version>0.0.0</version>
+  <version>0.1.0</version>
   <description>The eeduro_delta package</description>
 
-  <maintainer email="manuel@todo.todo">manuel</maintainer>
+  <maintainer email="manuel.ilg@ntb.ch">manuel</maintainer>
 
-  <license>TODO</license>
+  <license>Apache 2.0</license>
 
   <buildtool_depend>catkin</buildtool_depend>
 
 	<exec_depend>eeduro_delta_gazebo</exec_depend>
 	<exec_depend>eeduro_delta_description</exec_depend>
 	<exec_depend>eeduro_delta_joint_state_publisher</exec_depend>
+	<exec_depend>eeduro_delta_rqt</exec_depend>
 
   <export>
 		<metapackage/>
